# open-code-bench

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docker/exec/: Dockerfile
docker/exec-bcb/: Dockerfile
docs/: ARCHITECTURE.md
litellm/: config.yaml
scripts/: gen_humaneval.py  score_humaneval.py  serve-gateway.ps1  smoke_gateway.py
specs/: bigcodebench-hard-32b.yaml  bigcodebench-hard-72b.yaml  bigcodebench-hard.yaml  heplus-spark-7b.yaml  heplus.yaml
src/ocb/: __init__.py  provenance.py
src/ocb/benchmarks/: base.py  bigcodebench.py  humaneval_plus.py  registry.py
src/ocb/gateway/: client.py
src/ocb/runner/: run.py
src/ocb/sandbox/: runner.py
